--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=27017
-spring.application.name=ADMIN-SERVICE
+server.port=8081
+spring.application.name=admin
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
