--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8082
-spring.application.name=ORDER-SERVICE
-spring.data.mongodb.uri=mongodb+srv://vivekshukla:Qwert24%40@projectdb.7rxl5.mongodb.net/OrderData?retryWrites=true&w=majority
+spring.application.name=order
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
