--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8083
-spring.application.name=USER-SERVICE
-spring.data.mongodb.uri=mongodb+srv://vivekshukla:Qwert24%40@projectdb.7rxl5.mongodb.net/UserData?retryWrites=true&w=majority
+spring.application.name=user
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
