--- a/washer/src/main/resources/application.properties
+++ b/washer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8085
-spring.application.name=WASHER-SERVICE
+spring.application.name=washer
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
